--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,21 @@
+version: '3.8'
+
 services:
   postgres:
-    image: 'postgres:latest'
+    image: 'postgres:15'
     environment:
       - 'POSTGRES_DB=mydatabase'
       - 'POSTGRES_PASSWORD=secret'
       - 'POSTGRES_USER=myuser'
       - 'TIME_ZONE=UTC'
     ports:
-      - '5436'
+      - '5436:5432'
+    volumes:
+      - db:/data/db
+    labels:
+      org.springframework.boot.readiness-check.tcp.disable: true
+
+volumes:
+  db:
+    driver:
+      local
