--- a/compose.yaml
+++ b/compose.yaml
@@ -4,10 +4,9 @@ services:
   postgres:
     image: 'postgres:15'
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
-      - 'TIME_ZONE=UTC'
+      - 'POSTGRES_DB=db'
+      - 'POSTGRES_PASSWORD=password'
+      - 'POSTGRES_USER=user'
     ports:
       - '5436:5432'
     volumes:
