feat: add common and refactor code base

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,17 @@
 rootProject.name = 'spring-boot-microservices'
 include 'user-service'
+include 'common'
+include 'common'
+
+include 'common'
+include 'common'
+
+include 'common'
+include 'common'
+
+include 'common'
+include 'common'
+
+include 'common'
+include 'common'
+
