--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation project(path: ':common')
 
 	compileOnly 'org.projectlombok:lombok'
 
