--- a/compose.yaml
+++ b/compose.yaml
@@ -2,11 +2,12 @@ version: '3.8'
 
 services:
   postgres:
+    container_name: postgres
     image: 'postgres:15'
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=database'
+      - 'POSTGRES_PASSWORD=password'
+      - 'POSTGRES_USER=user'
       - 'TIME_ZONE=UTC'
     ports:
       - '5436:5432'
