--- a/compose.yaml
+++ b/compose.yaml
@@ -7,7 +7,7 @@ services:
     environment:
       - 'POSTGRES_DB=database'
       - 'POSTGRES_PASSWORD=password'
-      - 'POSTGRES_USER=user'
+      - 'POSTGRES_USER=user1'
       - 'TIME_ZONE=UTC'
     ports:
       - '5436:5432'
