--- a/faculty-service/src/main/resources/application.yaml
+++ b/faculty-service/src/main/resources/application.yaml
@@ -1,5 +1,3 @@
-server:
-  port: 0
 spring:
   profiles:
     active: dev
@@ -22,5 +20,7 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 service:
   auth:
-    base-url: http://localhost:8000/api/v1
+    base-url: http://localhost:8080/api/v1/auth
+server:
+  port: 8001
 
