--- a/faculty-service/src/main/resources/application.yaml
+++ b/faculty-service/src/main/resources/application.yaml
@@ -18,9 +18,16 @@ spring:
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+
 service:
   auth:
-    base-url: http://localhost:8080/api/v1/auth
+    base-url: 'http://localhost:8000/api/v1/auth'
+
 server:
   port: 8001
+
+logging:
+  level:
+   org.springframework: DEBUG
+
 
