--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes:1.1.10.RELEASE'
     implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
 
     compileOnly 'io.projectreactor:reactor-tools'
