--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -17,8 +17,9 @@ services:
   user-service:
     build:
       context: ./user-service
+    image: user-service
     ports:
-      - '8000:8000'
+      - '8003:8000'
     depends_on:
       - postgres
     environment:
@@ -31,8 +32,9 @@ services:
   faculty-service:
     build:
       context: ./faculty-service
+    image: faculty-service
     ports:
-      - '8001:8001'
+      - '800:8001'
     depends_on:
       - postgres
       - user-service
