sample of RabbitMQ

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 rootProject.name = 'spring-boot-microservices'
 include 'user-service', 'faculty-service'
 include 'enrollment-service'
+include 'analytics-service'
 
