--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
 
+rabbitmq.queue.name = 'notification_service'
+rabbitmq.exchange.name = 'notification_service_exchange'
+rabbitmq.routing.key = 'notification_service_routing_key'
+rabbitmq.queue.json.name = 'notification_service_json'
+rabbitmq.routing.json.key = 'notification_service_routing_json_key'
