--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -8,3 +8,7 @@ rabbitmq.exchange.name = 'notification_service_exchange'
 rabbitmq.routing.key = 'notification_service_routing_key'
 rabbitmq.queue.json.name = 'notification_service_json'
 rabbitmq.routing.json.key = 'notification_service_routing_json_key'
+
+rabbitmq.faculty.queue.name = 'faculty_service'
+rabbitmq.faculty.exchange.name = 'faculty_service_exchange'
+rabbitmq.faculty.routing.key = 'faculty_service_routing_key'
