send message when faculty created

--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.username=guest
 #spring.rabbitmq.password=guest
+server.port=8004
 
 rabbitmq.queue.name = 'notification_service'
 rabbitmq.exchange.name = 'notification_service_exchange'
