--- a/faculty-service/src/main/resources/application.yaml
+++ b/faculty-service/src/main/resources/application.yaml
@@ -26,4 +26,12 @@ service:
 server:
   port: 8001
 
+rabbitmq:
+  faculty:
+    queue:
+      name: faculty_service
+    routing:
+      key: faculty_service_routing_key
+
+
 
