feat: implement discipline functionality

--- a/faculty-service/src/main/resources/application.yaml
+++ b/faculty-service/src/main/resources/application.yaml
@@ -18,6 +18,13 @@ spring:
   docker:
     compose:
       enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    defer-datasource-initialization: true
+  sql:
+    init:
+       mode: always
 
 service:
   auth:
