--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -4,12 +4,12 @@
 #spring.rabbitmq.password=guest
 server.port=8004
 
-rabbitmq.queue.name = 'notification_service'
-rabbitmq.exchange.name = 'notification_service_exchange'
-rabbitmq.routing.key = 'notification_service_routing_key'
-rabbitmq.queue.json.name = 'notification_service_json'
-rabbitmq.routing.json.key = 'notification_service_routing_json_key'
+rabbitmq.queue.name = notification_service
+rabbitmq.exchange.name = notification_service_exchange
+rabbitmq.routing.key = notification_service_routing_key
+rabbitmq.queue.json.name = notification_service_json
+rabbitmq.routing.json.key = notification_service_routing_json_key
 
-rabbitmq.faculty.queue.name = 'faculty_service'
-rabbitmq.faculty.exchange.name = 'faculty_service_exchange'
-rabbitmq.faculty.routing.key = 'faculty_service_routing_key'
+rabbitmq.faculty.queue.name = faculty_service
+rabbitmq.faculty.exchange.name = faculty_service_exchange
+rabbitmq.faculty.routing.key = faculty_service_routing_key
