refactor: delete necessaries wrappers

--- a/enrollment-service/build.gradle
+++ b/enrollment-service/build.gradle
@@ -46,3 +46,7 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.register('wrapper', Wrapper) {
+    gradleVersion = '7.2'
+}
