--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'spring-boot-microservices'
 include 'user-service', 'faculty-service'
 include 'enrollment-service'
 include 'analytics-service'
+include 'notification-service'
 
