fix faculty producer

--- a/faculty-service/src/main/resources/application.yaml
+++ b/faculty-service/src/main/resources/application.yaml
@@ -34,11 +34,10 @@ server:
   port: 8001
 
 rabbitmq:
-  faculty:
-    queue:
-      name: faculty_service
+    exchange:
+      name: notification_service_exchange
     routing:
-      key: faculty_service_routing_key
+      key: notification_service_routing_key
 
 
 
