--- a/compose.yaml
+++ b/compose.yaml
@@ -16,15 +16,25 @@ services:
     labels:
       org.springframework.boot.readiness-check.tcp.disable: true
 
-  rabbitmq:
-    image: rabbitmq:management
-    container_name: rabbitmq
+#  rabbitmq:
+#    image: rabbitmq:management
+#    container_name: rabbitmq
+#    environment:
+#      - RABBITMQ_DEFAULT_USER=guest
+#      - RABBITMQ_DEFAULT_PASS=guest
+#    ports:
+#      - "5672:5672"
+#      - "15672:15672"
+#
+  activemq:
+    image: webcenter/activemq:latest
+    container_name: activemq
     environment:
-      - RABBITMQ_DEFAULT_USER=guest
-      - RABBITMQ_DEFAULT_PASS=guest
+      - ACTIVEMQ_ADMIN_LOGIN=admin
+      - ACTIVEMQ_ADMIN_PASSWORD=admin
     ports:
-      - "5672:5672"
-      - "15672:15672"
+      - "61616:61616"
+      - "8161:8161"
 
 volumes:
   db:
