--- a/faculty-service/src/main/resources/application.yaml
+++ b/faculty-service/src/main/resources/application.yaml
@@ -25,7 +25,10 @@ spring:
   sql:
     init:
        mode: always
-
+  activemq:
+    broker-url: http://localhost:61616
+    user: admin
+    password: admin
 service:
   auth:
     base-url: 'http://localhost:8080/api/v1/auth'
