--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -2,7 +2,13 @@
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.username=guest
 #spring.rabbitmq.password=guest
+
 server.port=8004
+
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
+
 rabbitmq.queue.name=notification_service
 rabbitmq.exchange.name=notification_service_exchange
 rabbitmq.routing.key=notification_service_routing_key
