in jms branch configure Jms broker

--- a/compose.yaml
+++ b/compose.yaml
@@ -25,16 +25,12 @@ services:
 #    ports:
 #      - "5672:5672"
 #      - "15672:15672"
-#
   activemq:
-    image: webcenter/activemq:latest
+    image: rmohr/activemq
     container_name: activemq
-    environment:
-      - ACTIVEMQ_ADMIN_LOGIN=admin
-      - ACTIVEMQ_ADMIN_PASSWORD=admin
     ports:
-      - "61616:61616"
       - "8161:8161"
+      - "61616:61616"
 
 volumes:
   db:
