--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -26,5 +26,10 @@ spring:
     generate-ddl: true
     hibernate:
       ddl-auto: update
+  activemq:
+    broker-url: tcp://localhost:61616
+    user: admin
+    password: admin
+
 
 
