--- a/faculty-service/src/main/resources/application.yaml
+++ b/faculty-service/src/main/resources/application.yaml
@@ -26,21 +26,21 @@ spring:
     init:
        mode: always
   activemq:
-    broker-url: http://localhost:61616
+    broker-url: tcp://localhost:61616
     user: admin
     password: admin
 service:
   auth:
     base-url: 'http://localhost:8080/api/v1/auth'
-
+activemq:
+  faculty:
+    queue:
+      name: "faculty_service"
+    routing:
+      key: "faculty_service_routing_key"
 server:
   port: 8001
 
-rabbitmq:
-    exchange:
-      name: notification_service_exchange
-    routing:
-      key: notification_service_routing_key
 
 
 
