--- a/notification-service/build.gradle
+++ b/notification-service/build.gradle
@@ -23,10 +23,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-artemis'
-	implementation 'org.springframework.boot:spring-boot-starter-json'
-
-	runtimeOnly 'org.apache.activemq:artemis-jakarta-server'
+//	implementation 'org.springframework.boot:spring-boot-starter-json'
+	implementation 'org.springframework.boot:spring-boot-starter-activemq'
 
 	compileOnly 'org.projectlombok:lombok'
 
@@ -35,7 +33,6 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.amqp:spring-rabbit-test'
 }
 
 tasks.named('test') {
