--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,16 +1,14 @@
-#spring.rabbitmq.host=localhost
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
-
 server.port=8004
 
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 
-rabbitmq.queue.name=notification_service
-rabbitmq.exchange.name=notification_service_exchange
-rabbitmq.routing.key=notification_service_routing_key
-rabbitmq.queue.json.name=notification_service_json
-rabbitmq.routing.json.key=notification_service_routing_json_key
+activemq.faculty.queue.name=faculty_service
+activemq.faculty.routing.key=faculty_service_routing_key
+
+#rabbitmq.queue.name=notification_service
+#rabbitmq.exchange.name=notification_service_exchange
+#rabbitmq.routing.key=notification_service_routing_key
+#rabbitmq.queue.json.name=notification_service_json
+#rabbitmq.routing.json.key=notification_service_routing_json_key
