--- a/analytics-service/src/main/resources/application.yaml
+++ b/analytics-service/src/main/resources/application.yaml
@@ -7,6 +7,7 @@ activemq:
   faculty:
     queue:
       name: "faculty_service"
+    delete: "faculty_delete_service"
     routing:
       key: "faculty_service_routing_key"
 server:
