--- a/faculty-service/src/main/resources/application.yaml
+++ b/faculty-service/src/main/resources/application.yaml
@@ -36,6 +36,7 @@ activemq:
   faculty:
     queue:
       name: "faculty_service"
+    delete: "faculty_delete_service"
     routing:
       key: "faculty_service_routing_key"
 server:
