--- a/faculty-service/src/main/resources/application.yaml
+++ b/faculty-service/src/main/resources/application.yaml
@@ -29,6 +29,7 @@ spring:
     broker-url: tcp://localhost:61616
     user: admin
     password: admin
+    topic-name: "faculty_service"
 service:
   auth:
     base-url: 'http://localhost:8080/api/v1/auth'
