--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.activemq.password=admin
 
 activemq.faculty.queue.name=faculty_service
 activemq.faculty.routing.key=faculty_service_routing_key
-
+activemq.faculty.get=faculty_get_service
 #rabbitmq.queue.name=notification_service
 #rabbitmq.exchange.name=notification_service_exchange
 #rabbitmq.routing.key=notification_service_routing_key
