--- a/enrollment-service/src/main/resources/application-dev.properties
+++ b/enrollment-service/src/main/resources/application-dev.properties
@@ -1,3 +1,7 @@
 service.auth.base-url=http://localhost:8080/api/v1/auth
 spring.docker.compose.enabled=true
+management.endpoints.web.exposure.include = *
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+management.endpoint.shutdown.enabled=true
 server.port=8003
