--- a/enrollment-service/src/main/resources/application.properties
+++ b/enrollment-service/src/main/resources/application.properties
@@ -2,3 +2,8 @@ enrollment.state=CLOSED
 
 spring.profiles.active=dev
 spring.main.allow-bean-definition-overriding=true
+
+management.endpoints.web.exposure.include = *
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+management.endpoint.shutdown.enabled=true
