--- a/analytics-service/src/main/resources/application.yaml
+++ b/analytics-service/src/main/resources/application.yaml
@@ -11,6 +11,17 @@ activemq:
     get: "faculty_get_service"
     routing:
       key: "faculty_service_routing_key"
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+      show-components: always
+    shutdown:
+      enabled: true
 server:
   port: 8005
 
