--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -12,3 +12,8 @@ activemq.faculty.get=faculty_get_service
 #rabbitmq.routing.key=notification_service_routing_key
 #rabbitmq.queue.json.name=notification_service_json
 #rabbitmq.routing.json.key=notification_service_routing_json_key
+
+management.endpoints.web.exposure.include = *
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+management.endpoint.shutdown.enabled=true
