--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    //implementation 'pl.project13.maven:git-commit-id-plugin:4.9.10'
 
     compileOnly 'io.projectreactor:reactor-tools'
     compileOnly 'org.projectlombok:lombok'
