Spring Admin added
+spring admin service
+admin server
+configs for admin clients (all)

--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -17,3 +17,5 @@ management.endpoints.web.exposure.include = *
 management.endpoint.health.show-details=always
 management.endpoint.health.show-components=always
 management.endpoint.shutdown.enabled=true
+
+spring.boot.admin.client.url=http://localhost:8002/admin
