--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include 'user-service', 'faculty-service'
 include 'enrollment-service'
 include 'analytics-service'
 include 'notification-service'
+include 'admin-service'
 
