--- a/analytics-service/src/main/resources/application.yaml
+++ b/analytics-service/src/main/resources/application.yaml
@@ -3,6 +3,10 @@ spring:
     broker-url: tcp://localhost:61616
     user: admin
     password: admin
+  boot:
+    admin:
+      client:
+        url: "http://localhost:8002/admin"
 activemq:
   faculty:
     queue:
