--- a/enrollment-service/build.gradle
+++ b/enrollment-service/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.postgresql:r2dbc-postgresql:1.0.2.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'de.codecentric:spring-boot-admin-starter-client:3.1.7'
 
     compileOnly 'org.projectlombok:lombok'
 
