--- a/faculty-service/src/main/resources/application.yaml
+++ b/faculty-service/src/main/resources/application.yaml
@@ -30,6 +30,10 @@ spring:
     user: admin
     password: admin
     topic-name: "faculty_service"
+  boot:
+    admin:
+      client:
+        url: "http://localhost:8002/admin"
 service:
   auth:
     base-url: 'http://localhost:8080/api/v1/auth'
