--- a/notification-service/build.gradle
+++ b/notification-service/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-json'
 	implementation 'org.springframework.boot:spring-boot-starter-activemq'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'de.codecentric:spring-boot-admin-starter-client:3.1.7'
 
 	compileOnly 'org.projectlombok:lombok'
 
