--- a/compose.yaml
+++ b/compose.yaml
@@ -16,21 +16,44 @@ services:
     labels:
       org.springframework.boot.readiness-check.tcp.disable: true
 
-#  rabbitmq:
-#    image: rabbitmq:management
-#    container_name: rabbitmq
-#    environment:
-#      - RABBITMQ_DEFAULT_USER=guest
-#      - RABBITMQ_DEFAULT_PASS=guest
-#    ports:
-#      - "5672:5672"
-#      - "15672:15672"
   activemq:
     image: rmohr/activemq
     container_name: activemq
     ports:
       - "8161:8161"
       - "61616:61616"
+
+  elasticsearch:
+    image: elasticsearch:8.8.0
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+    networks:
+      - logging-network
+
+  logstash:
+    image: docker.elastic.co/logstash/logstash:7.1.1
+    depends_on:
+      - elasticsearch
+    ports:
+      - "12201:12201/udp"
+    volumes:
+      - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf:ro
+    networks:
+      - logging-network
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.1.1
+    depends_on:
+      - logstash
+    ports:
+      - "5601:5601"
+    networks:
+      - logging-network
+
+networks:
+  logging-network:
+    driver: bridge
 
 volumes:
   db:
