--- a/enrollment-service/src/main/resources/application.properties
+++ b/enrollment-service/src/main/resources/application.properties
@@ -9,3 +9,4 @@ management.endpoint.health.show-components=always
 management.endpoint.shutdown.enabled=true
 
 spring.boot.admin.client.url=http://localhost:8002/admin
+logging.file.path=/home/stas/projects/spring-boot-microservices/logs/spring-boot-microservices.log
