--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -14,6 +14,11 @@ user-service:
     email: admin@mail.com
     password: adminpassword
 
+logging:
+  file:
+    path: /home/stas/projects/spring-boot-microservices/logs/spring-boot-microservices.log
+    name: spring-boot-microservices.log
+
 ---
 spring:
   config:
@@ -45,3 +50,4 @@ management:
       show-components: always
     shutdown:
       enabled: true
+
