--- a/admin-service/src/main/resources/application.yaml
+++ b/admin-service/src/main/resources/application.yaml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: "admin_service"
   boot:
     admin:
       context-path: /admin
@@ -13,5 +15,9 @@ management:
       show-components: always
     shutdown:
       enabled: true
+eureka:
+  client:
+    service-url:
+      defaultZone: "http://localhost:8761/eureka/"
 server:
   port: 8002
