--- a/enrollment-service/src/main/resources/application.properties
+++ b/enrollment-service/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 enrollment.state=CLOSED
 
+spring.application.name=enrollment_service
+
 spring.profiles.active=dev
 spring.main.allow-bean-definition-overriding=true
 
@@ -9,3 +11,5 @@ management.endpoint.health.show-components=always
 management.endpoint.shutdown.enabled=true
 
 spring.boot.admin.client.url=http://localhost:8002/admin
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
