--- a/faculty-service/src/main/resources/application.yaml
+++ b/faculty-service/src/main/resources/application.yaml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: "faculty_service"
   profiles:
     active: dev
   docker:
@@ -56,6 +58,10 @@ management:
       show-components: always
     shutdown:
       enabled: true
+eureka:
+  client:
+    service-url:
+      defaultZone: "http://localhost:8761/eureka/"
 server:
   port: 8001
 
