--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: "user_service"
   profiles:
     active: dev
   docker:
@@ -45,3 +47,7 @@ management:
       show-components: always
     shutdown:
       enabled: true
+eureka:
+  client:
+    service-url:
+      defaultZone: "http://localhost:8761/eureka/"
