--- a/enrollment-service/src/main/resources/application-dev.properties
+++ b/enrollment-service/src/main/resources/application-dev.properties
@@ -1,3 +1,4 @@
+spring.application.name=enrollment_service
 service.auth.base-url=http://localhost:8080/api/v1/auth
 spring.docker.compose.enabled=true
 management.endpoints.web.exposure.include = *
@@ -5,4 +6,5 @@ management.endpoint.health.show-details=always
 management.endpoint.health.show-components=always
 management.endpoint.shutdown.enabled=true
 spring.boot.admin.client.url=http://localhost:8002/admin
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 server.port=8003
