--- a/analytics-service/src/main/resources/application.yaml
+++ b/analytics-service/src/main/resources/application.yaml
@@ -1,12 +1,11 @@
 spring:
-  activemq:
-    broker-url: tcp://localhost:61616
-    user: admin
-    password: admin
-  boot:
-    admin:
-      client:
-        url: "http://localhost:8002/admin"
+  profiles:
+    active: dev
+  main:
+    allow-bean-definition-overriding: true
+  application:
+    name: "analytics-service"
+
 activemq:
   faculty:
     queue:
@@ -26,15 +25,16 @@ management:
       show-components: always
     shutdown:
       enabled: true
-server:
-  port: 8005
 
-
-logging:
-  file:
-    path: /home/stas/projects/spring-boot-microservices/logs/spring-boot-microservices.log
-    name: spring-boot-microservices.log
-
-
-
-
+---
+spring:
+  application:
+    name: analytics-service
+  config:
+    import: configserver:http://root:s3cr3t@localhost:8888
+    activate:
+      on-profile: dev
+  activemq:
+    broker-url: tcp://localhost:61616
+    user: admin
+    password: admin
