--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-server.port=8004
-
-spring.activemq.broker-url=tcp://localhost:61616
-spring.activemq.user=admin
-spring.activemq.password=admin
+spring.application.name=notification-service
+spring.profiles.active=dev
+spring.main.allow-bean-definition-overriding=true
 
 activemq.faculty.queue.name=faculty_service
 activemq.faculty.routing.key=faculty_service_routing_key
@@ -17,7 +15,3 @@ management.endpoints.web.exposure.include = *
 management.endpoint.health.show-details=always
 management.endpoint.health.show-components=always
 management.endpoint.shutdown.enabled=true
-
-spring.boot.admin.client.url=http://localhost:8002/admin
-logging.file.path=/home/stas/projects/spring-boot-microservices/logs
-logging.file.name=spring-boot-microservices.log
