--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -8,6 +8,16 @@ group = 'com.record-system'
 version = '0.0.1'
 def jjwtVersion = "0.11.5"
 
+ext {
+    set('springCloudVersion', "2022.0.3")
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
+
 java {
     sourceCompatibility = '17'
 }
@@ -28,9 +38,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation "org.springframework.cloud:spring-cloud-starter-config"
     implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    //implementation 'pl.project13.maven:git-commit-id-plugin:4.9.10'
     implementation 'de.codecentric:spring-boot-admin-starter-client:3.1.7'
 
     compileOnly 'io.projectreactor:reactor-tools'
