--- a/compose.yaml
+++ b/compose.yaml
@@ -23,37 +23,50 @@ services:
       - "8161:8161"
       - "61616:61616"
 
-  elasticsearch:
-    image: elasticsearch:8.8.0
-    environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false
-    networks:
-      - logging-network
-
-  logstash:
-    image: docker.elastic.co/logstash/logstash:7.1.1
-    depends_on:
-      - elasticsearch
-    ports:
-      - "12201:12201/udp"
-    volumes:
-      - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf:ro
-    networks:
-      - logging-network
-
-  kibana:
-    image: docker.elastic.co/kibana/kibana:7.1.1
-    depends_on:
-      - logstash
-    ports:
-      - "5601:5601"
-    networks:
-      - logging-network
-
-networks:
-  logging-network:
-    driver: bridge
+#  elasticsearch:
+#    image: elasticsearch:8.8.0
+#    container_name: elasticsearch
+#    ports:
+#      - "9200:9200"
+#      - "9300:9300"
+#    environment:
+#      - bootstrap.memory_lock=true
+#      - discovery.type=single-node
+#      - "ES_JAVA_OPTS=-Xms2g -Xmx2g"
+#      - ELASTIC_PASSWORD=password
+#      - xpack.security.enabled=true
+#    networks:
+#      - logging-network
+#
+#  logstash:
+#    image: docker.elastic.co/logstash/logstash:8.8.0
+#    container_name: logstash
+#    depends_on:
+#      - elasticsearch
+#    ports:
+#      - "9999:9999"
+#    volumes:
+#      - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+#    networks:
+#      - logging-network
+#
+#  kibana:
+#    image: docker.elastic.co/kibana/kibana:8.8.0
+#    container_name: kibana
+#    depends_on:
+#      - logstash
+#      - elasticsearch
+#    ports:
+#      - "5601:5601"
+#    networks:
+#      - logging-network
+#    environment:
+#      - ELASTIC_PASSWORD=password
+#      - ELASTICSEARCH_USERNAME=elastic
+#
+#networks:
+#  logging-network:
+#    driver: bridge
 
 volumes:
   db:
