--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -19,5 +19,5 @@ management.endpoint.health.show-components=always
 management.endpoint.shutdown.enabled=true
 
 spring.boot.admin.client.url=http://localhost:8002/admin
-logging.file.path=/home/stas/projects/spring-boot-microservices/logs
-logging.file.name=spring-boot-microservices.log
+logging.file.path=/logs
+logging.file.name = spring-boot-microservices.log
