--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -16,9 +16,8 @@ user-service:
 
 logging:
   file:
-    path: /home/stas/projects/spring-boot-microservices/logs/spring-boot-microservices.log
-    name: spring-boot-microservices.log
-
+    path: /logs
+    name : spring-boot-microservices.log
 ---
 spring:
   config:
