--- a/faculty/src/main/resources/application.yaml
+++ b/faculty/src/main/resources/application.yaml
@@ -1,11 +1,10 @@
 spring:
   application:
-    name: "faculty_service"
+    name: faculty
+
   profiles:
     active: dev
-  docker:
-    compose:
-      enabled: false
+
   jpa:
     generate-ddl: true
     hibernate:
@@ -18,33 +17,21 @@ spring:
 ---
 spring:
   config:
-    import: configserver:http://root:s3cr3t@localhost:8888
+    import:
+      - file:.env[.properties]
+      - configserver:http://root:s3cr3t@localhost:8888
     activate:
       on-profile: dev
-  docker:
-    compose:
-      enabled: false
+
   jpa:
-    hibernate:
-      ddl-auto: update
     defer-datasource-initialization: true
     show-sql: true
     generate-ddl: true
   sql:
     init:
       mode: never
-  activemq:
-    broker-url: tcp://localhost:61616
-    user: admin
-    password: admin
-    topic-name: "faculty_service"
-  datasource:
-    url: jdbc:postgresql://127.0.0.1:5436/database
-    username: user1
-    password: password
-service:
-  auth:
-    base-url: 'http://localhost:8080/api/v1/auth'
+
+
 activemq:
   faculty:
     queue:
