--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ EUREKA_PORT=8761
 ADMIN_SERVICE_PORT=8002
 FACULTY_SERVICE_PORT=8001
 ENROLLMENT_SERVICE_PORT=8003
+ANALYTICS_SERVICE_PORT=8005
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
