refactor admin notification

--- a/config/src/main/resources/enrollment.properties
+++ b/config/src/main/resources/enrollment.properties
@@ -1,2 +1,3 @@
 logging.file.name=spring-boot-microservices.log
 spring.main.allow-bean-definition-overriding=true
+server.port=${ENROLLMENT_SERVICE_PORT}
