--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-server.port=8004
-
-spring.application.name=notification-service
+spring.application.name=notification
 spring.profiles.active=dev
 spring.main.allow-bean-definition-overriding=true
 
@@ -12,12 +10,3 @@ activemq.faculty.get=faculty_get_service
 #rabbitmq.routing.key=notification_service_routing_key
 #rabbitmq.queue.json.name=notification_service_json
 #rabbitmq.routing.json.key=notification_service_routing_json_key
-
-management.endpoints.web.exposure.include = *
-management.endpoint.health.show-details=always
-management.endpoint.health.show-components=always
-spring.boot.admin.client.url=http://localhost:8002/admin
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-
-management.endpoint.shutdown.enabled=true
