--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ ADMIN_SERVICE_PORT=8002
 FACULTY_SERVICE_PORT=8001
 ENROLLMENT_SERVICE_PORT=8003
 ANALYTICS_SERVICE_PORT=8005
+GATEWAY_PORT=8010
+NOTIFICATION_SERVICE_PORT=8004
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
