--- a/eureka/build.gradle
+++ b/eureka/build.gradle
@@ -17,6 +17,16 @@ configurations {
     }
 }
 
+ext {
+    set('springCloudVersion', "2022.0.3")
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
+
 repositories {
     mavenCentral()
 }
