--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -1,14 +1,13 @@
 spring:
   application:
-    name: gateway-service
+    name: gateway
+
   profiles:
     active: dev
+
   cloud:
     gateway:
       discovery:
         locator:
           enabled: true
           lower-case-service-id: true
-server:
-  port: 8010
-
