add gRPC communication between auth and enrollment

--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ ANALYTICS_SERVICE_PORT=8005
 GATEWAY_PORT=8010
 NOTIFICATION_SERVICE_PORT=8004
 
+USER_SERVICE_GRPC_PORT=9000
+
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_PORT=5436
