--- a/config/src/main/resources/auth-dev.properties
+++ b/config/src/main/resources/auth-dev.properties
@@ -1,6 +1,8 @@
 user-service.admin.email=admin@mail.com
 user-service.admin.password=adminpassword
 
+grpc.server.reflection.enabled=true
+
 spring.config.import=file:env.properties
 
 spring.r2dbc.url=r2dbc:postgresql://localhost:${POSTGRES_PORT}/${POSTGRES_DB}
