--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.3'
     id 'io.spring.dependency-management' version '1.1.3'
+    id 'com.google.protobuf' version '0.9.4'
 }
 
 group = 'com.record-system'
@@ -27,6 +28,10 @@ configurations {
         extendsFrom annotationProcessor
     }
 }
+
+def grpcVersion = '1.59.0'
+def protobufVersion = '3.24.0'
+def protocVersion = protobufVersion
 
 repositories {
     mavenCentral()
@@ -58,8 +63,32 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
+
+    implementation platform('com.freemanan:grpc-starter-dependencies:3.1.5')
+    implementation 'com.freemanan:grpc-server-boot-starter'
+    implementation "com.google.protobuf:protobuf-java-util:${protobufVersion}"
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+protobuf {
+    protoc { artifact = "com.google.protobuf:protoc:${protocVersion}" }
+    plugins {
+        grpc { artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" }
+    }
+    generateProtoTasks {
+        all()*.plugins { grpc {} }
+    }
+}
+
+// Inform IDEs like IntelliJ IDEA, Eclipse or NetBeans about the generated code.
+sourceSets {
+    main {
+        java {
+            srcDirs 'build/generated/source/proto/main/grpc'
+            srcDirs 'build/generated/source/proto/main/java'
+        }
+    }
 }
