feat: add gRPC communication for services: enrollment - auth,  enrolment - faculty

--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ GATEWAY_PORT=8010
 NOTIFICATION_SERVICE_PORT=8004
 
 USER_SERVICE_GRPC_PORT=9000
+FACULTY_SERVICE_GRPC_PORT=9001
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
