--- a/config/src/main/resources/faculty-dev.properties
+++ b/config/src/main/resources/faculty-dev.properties
@@ -3,6 +3,8 @@ management.endpoint.health.show-details=always
 management.endpoint.health.show-components=always
 management.endpoint.shutdown.enabled=true
 
+grpc.server.reflection.enabled=true
+
 spring.config.import=file:env.properties
 
 spring.datasource.url=jdbc:postgresql://localhost:${POSTGRES_PORT}/${POSTGRES_DB}
