--- a/config/src/main/resources/faculty.properties
+++ b/config/src/main/resources/faculty.properties
@@ -1,3 +1,4 @@
 logging.file.name=spring-boot-microservices.log
 spring.main.allow-bean-definition-overriding=true
 server.port=${FACULTY_SERVICE_PORT}
+grpc.server.port=${FACULTY_SERVICE_GRPC_PORT}
