--- a/enrollment/src/main/resources/application-dev.properties
+++ b/enrollment/src/main/resources/application-dev.properties
@@ -1,2 +1,3 @@
 spring.config.import=file:.env[.properties],configserver:http://root:s3cr3t@localhost:8888
-grpc.client.authority=localhost:9000
+grpc.client.auth=localhost:9000
+grpc.client.discipline=localhost:9001
