--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ GATEWAY_PORT=8010
 NOTIFICATION_SERVICE_PORT=8004
 
 USER_SERVICE_GRPC_PORT=9000
+FACULTY_SERVICE_GRPC_PORT=9001
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
@@ -19,3 +20,16 @@ ACTIVEMQ_WEB_PORT=8161
 ACTIVEMQ_BROKER_PORT=61616
 ACTIVEMQ_USER=admin
 ACTIVEMQ_PASSWORD=admin
+
+ELASTIC_PASSWORD=aaaaaa
+KIBANA_PASSWORD=111111
+STACK_VERSION=7.12.0
+CLUSTER_NAME=docker-cluster
+LICENSE=basic
+#LICENSE=trial
+ES_PORT=9200
+#ES_PORT=127.0.0.1:9200
+KIBANA_PORT=5601
+#KIBANA_PORT=80
+MEM_LIMIT=1073741824
+#COMPOSE_PROJECT_NAME=spring-boot-microservices
