--- a/faculty/src/main/resources/application.yaml
+++ b/faculty/src/main/resources/application.yaml
@@ -10,6 +10,9 @@ spring:
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
   main:
     allow-bean-definition-overriding: true
