--- a/analytics/Dockerfile
+++ b/analytics/Dockerfile
@@ -1,12 +1,7 @@
 FROM openjdk:17-jdk-alpine3.13
-
 ENV SERVER_PORT 8005
 ENV SPRING_PROFILES_ACTIVE docker
-
-COPY build/libs/analythics-service-0.0.1.jar /app/
-
+COPY build/libs/analytics-0.0.1.jar /app/analytics.jar
 WORKDIR /app
-
-EXPOSE 8001
-
-CMD ["java", "-jar", "analythics-service-0.0.1.jar"]
+EXPOSE 8005
+CMD ["java", "-jar", "analytics.jar"]
