--- a/config/src/main/resources/notification.properties
+++ b/config/src/main/resources/notification.properties
@@ -1,2 +1,7 @@
 logging.file.name=spring-boot-microservices.log
 server.port=${NOTIFICATION_SERVICE_PORT}
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+management.endpoint.shutdown.enabled=true
