--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 USER_SERVICE_PORT=8000
 EUREKA_PORT=8761
-ADMIN_SERVICE_PORT=8002
+ADMIN_SERVICE_PORT=8002A
 FACULTY_SERVICE_PORT=8001
 ENROLLMENT_SERVICE_PORT=8003
 ANALYTICS_SERVICE_PORT=8005
