--- a/config/src/main/resources/enrollment.properties
+++ b/config/src/main/resources/enrollment.properties
@@ -1,3 +1,8 @@
 logging.file.name=spring-boot-microservices.log
 spring.main.allow-bean-definition-overriding=true
 server.port=${ENROLLMENT_SERVICE_PORT}
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+management.endpoint.shutdown.enabled=true
