--- a/config/src/main/resources/faculty.properties
+++ b/config/src/main/resources/faculty.properties
@@ -2,3 +2,8 @@ logging.file.name=spring-boot-microservices.log
 spring.main.allow-bean-definition-overriding=true
 server.port=${FACULTY_SERVICE_PORT}
 grpc.server.port=${FACULTY_SERVICE_GRPC_PORT}
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+management.endpoint.shutdown.enabled=true
