--- a/eureka/src/main/resources/application.yaml
+++ b/eureka/src/main/resources/application.yaml
@@ -16,3 +16,11 @@ spring:
       - configserver:http://root:s3cr3t@localhost:8888
     activate:
       on-profile: dev
+
+---
+spring:
+  config:
+    import:
+      - configserver:${CONFIG_URL}
+    activate:
+      on-profile: docker
