--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -11,22 +11,29 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
+
 ---
 spring:
   config:
     import:
-      - file:.env[.properties]
       - configserver:${CONFIG_URL}
     activate:
       on-profile: docker
 ---
 service:
   uri:
-    faculty: "http://localhost:8001"
-    discipline: "http://localhost:8001"
-    schedule: "http://localhost:8001"
-    auth: "http://localhost:8000"
-    user: "http://localhost:8000"
-    enrollment: "http://localhost:8003"
-    notification: "http://localhost:8004"
-    admin: "http://localhost:8002"
+    faculty: "http://localhost:${FACULTY_SERVICE_PORT}"
+    discipline: "http://localhost:${FACULTY_SERVICE_PORT}"
+    schedule: "http://localhost:${FACULTY_SERVICE_PORT}"
+    auth: "http://localhost:${USER_SERVICE_PORT}"
+    user: "http://localhost:${USER_SERVICE_PORT}"
+    enrollment: "http://localhost:${ENROLLMENT_SERVICE_PORT}"
+    notification: "http://localhost:${NOTIFICATION_SERVICE_PORT}"
+    admin: "http://localhost:${ADMIN_SERVICE_PORT}"
+spring:
+  config:
+    import:
+      - file:.env[.properties]
+      - configserver:http://root:s3cr3t@localhost:8888
+    activate:
+      on-profile: dev
