--- a/enrollment/src/main/resources/application-dev.properties
+++ b/enrollment/src/main/resources/application-dev.properties
@@ -1,3 +1,7 @@
 spring.config.import=file:.env[.properties],configserver:http://root:s3cr3t@localhost:8888
 grpc.client.auth=localhost:9000
 grpc.client.discipline=localhost:9001
+
+spring.activemq.broker-url=tcp://localhost:${ACTIVEMQ_BROKER_PORT}
+spring.activemq.user=${ACTIVEMQ_USER}
+spring.activemq.password=${ACTIVEMQ_PASSWORD}
