--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'
+
+    implementation "org.springframework.cloud:spring-cloud-starter-config"
 }
 
 dependencyManagement {
