--- a/enrollment/src/main/resources/application-dev.properties
+++ b/enrollment/src/main/resources/application-dev.properties
@@ -5,3 +5,4 @@ grpc.client.discipline=localhost:9001
 spring.activemq.broker-url=tcp://localhost:${ACTIVEMQ_BROKER_PORT}
 spring.activemq.user=${ACTIVEMQ_USER}
 spring.activemq.password=${ACTIVEMQ_PASSWORD}
+allowed.origins=*
