--- a/enrollment/src/main/resources/application-docker.properties
+++ b/enrollment/src/main/resources/application-docker.properties
@@ -1,3 +1,4 @@
 spring.config.import=configserver:${CONFIG_URL}
 grpc.client.auth=${GRPC_AUTH_CLIENT_URI}
 grpc.client.discipline=${GRPC_DISCIPLINE_CLIENT_URI}
+allowed.origins=http://${GATEWAY_HOST}:${GATEWAY_PORT}
