very many important changes for devops configurations

--- a/admin-panel/Dockerfile
+++ b/admin-panel/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:17-jdk-alpine3.13
+FROM openjdk:17-oracle
 ENV SERVER_PORT 8761
 ENV SPRING_PROFILES_ACTIVE docker
 COPY build/libs/admin-panel-0.0.1.jar /app/admin-panel.jar
