--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:17-jdk-alpine3.13
+FROM openjdk:17-oracle
 ENV SERVER_PORT 8000
 ENV GRPC_SERVER_PORT 9000
 ENV SPRING_PROFILES_ACTIVE docker
