--- a/compose-prod.yaml
+++ b/compose-prod.yaml
@@ -225,58 +225,58 @@ services:
       - eureka
       - config
 
-#  elasticsearch:
-#    image: docker.elastic.co/elasticsearch/elasticsearch:7.12.0
-#    container_name: elasticsearch
-#    environment:
-#      - xpack.security.enabled=false
-#      - discovery.type=single-node
-#    ulimits:
-#      memlock:
-#        soft: -1
-#        hard: -1
-#      nofile:
-#        soft: 65536
-#        hard: 65536
-#    cap_add:
-#      - IPC_LOCK
-#    volumes:
-#      - elasticsearch-data-volume:/usr/share/elasticsearch/data
-#    ports:
-#      - "9200:9200"
-#    networks:
-#      - elk
-#
-#  logstash:
-#    image: docker.elastic.co/logstash/logstash:7.12.0
-#    container_name: logstash
-#    volumes:
-#      - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
-#      - ./spring-boot-microservices.log:/usr/share/logstash/spring-boot-microservices.log
-#    environment:
-#      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
-#      ELASTICSEARCH_HOST: http://elasticsearch:9200/
-#      xpack.monitoring.enabled: true
-#      pipeline.ecs_compatibility: disabled
-#    ports:
-#      - "5000:5000"
-#    depends_on:
-#      - elasticsearch
-#    networks:
-#      - elk
-#
-#  kibana:
-#    container_name: kibana
-#    image: docker.elastic.co/kibana/kibana:7.12.0
-#    environment:
-#      SERVER_NAME: kibana
-#      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
-#    ports:
-#      - "5601:5601"
-#    depends_on:
-#      - elasticsearch
-#    networks:
-#      - elk
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.12.0
+    container_name: elasticsearch
+    environment:
+      - xpack.security.enabled=false
+      - discovery.type=single-node
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    cap_add:
+      - IPC_LOCK
+    volumes:
+      - elasticsearch-data-volume:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
+    networks:
+      - elk
+
+  logstash:
+    image: docker.elastic.co/logstash/logstash:7.12.0
+    container_name: logstash
+    volumes:
+      - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+      - ./spring-boot-microservices.log:/usr/share/logstash/spring-boot-microservices.log
+    environment:
+      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
+      ELASTICSEARCH_HOST: http://elasticsearch:9200/
+      xpack.monitoring.enabled: true
+      pipeline.ecs_compatibility: disabled
+    ports:
+      - "5001:5000"
+    depends_on:
+      - elasticsearch
+    networks:
+      - elk
+
+  kibana:
+    container_name: kibana
+    image: docker.elastic.co/kibana/kibana:7.12.0
+    environment:
+      SERVER_NAME: kibana
+      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
+    ports:
+      - "5601:5601"
+    depends_on:
+      - elasticsearch
+    networks:
+      - elk
 
 volumes:
   db:
