--- a/config/src/main/resources/enrollment-docker.properties
+++ b/config/src/main/resources/enrollment-docker.properties
@@ -6,3 +6,7 @@ spring.r2dbc.password=${POSTGRES_PASSWORD}
 
 spring.boot.admin.client.url=http://${ADMIN_SERVICE_HOST}:${ADMIN_SERVICE_PORT}/admin
 eureka.client.service-url.defaultZone=http://${EUREKA_HOST}:${EUREKA_PORT}/eureka/
+
+spring.activemq.broker-url=tcp://${ACTIVEMQ_BROKER_HOST}:${ACTIVEMQ_BROKER_PORT}
+spring.activemq.user=${ACTIVEMQ_USER}
+spring.activemq.password=${ACTIVEMQ_PASSWORD}
